[project]
name = "review-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.58.0",
    "ollama==0.6.1",
    "chromadb==1.4.1",
    "pydantic>=2.13.4",
    "uvicorn==0.40.0",
    "fastapi[standard]>=0.136.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2"
]